--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
           </li>
         </ul>
       </nav>
+      <div class=" flex flex-1">
+        <div class="about-me__info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img src="http://media1.s-nbcnews.com/i/streams/2013/August/130808/6C8558749-130808-walter-white-tease.jpg" class="about-me__picture" alt="">
+            </figure>
+            <h1 class="about-me__info--title">
+              Hello My Name Is <span class="text--blue"> Walter Hartwell White </span> 
+            </h1>
+            <p class="about-me__info--para">
+              A guy opens his door And Gets Shot you think of me. NO! <strong class="text--red"> I AM THE ONE WHO KNOCKS</strong> 
+            </p>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
