--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kernane Raouf</title>
     <link rel="stylesheet" href="./styles.css" />
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <section id="about-me">
@@ -40,12 +41,31 @@
               <img src="http://media1.s-nbcnews.com/i/streams/2013/August/130808/6C8558749-130808-walter-white-tease.jpg" class="about-me__picture" alt="">
             </figure>
             <h1 class="about-me__info--title">
-              Hello My Name Is <span class="text--blue"> Walter Hartwell White </span> 
+              Hello My Name Is  Walter Hartwell White  
             </h1>
             <p class="about-me__info--para">
               A guy opens his door And Gets Shot you think of me. NO! <strong class="text--red"> I AM THE ONE WHO KNOCKS</strong> 
             </p>
+            <div class="about-me__links">
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-lungs-virus"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-flask"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-redhat"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-biohazard"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-money-bill-wave"></i>
+              </a>
+            </div>
           </div>
+          <figure class="about-me__img--container"></figure>
+          <img src="./Assets/undraw_Science_re_mnnr.png" class="about-me__img" alt="">
         </div>
       </div>
     </section>
