--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kernane Raouf</title>
     <link rel="stylesheet" href="./styles.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/c8e4d183c2.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <section id="about-me">
       <nav>
-        <div class="personal__logo">Kernane Raouf</div>
+        <div class="personal__logo">Heisenberg</div>
         <ul class="nav__link--list">
           <li>
             <a
@@ -34,17 +37,22 @@
           </li>
         </ul>
       </nav>
-      <div class=" flex flex-1">
+      <div class="flex flex-1">
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-              <img src="http://media1.s-nbcnews.com/i/streams/2013/August/130808/6C8558749-130808-walter-white-tease.jpg" class="about-me__picture" alt="">
+              <img
+                src="http://media1.s-nbcnews.com/i/streams/2013/August/130808/6C8558749-130808-walter-white-tease.jpg"
+                class="about-me__picture"
+                alt=""
+              />
             </figure>
             <h1 class="about-me__info--title">
-              Hello My Name Is  Walter Hartwell White  
+              My Name Is Walter Hartwell White
             </h1>
             <p class="about-me__info--para">
-              A guy opens his door And Gets Shot you think of me. NO! <strong class="text--red"> I AM THE ONE WHO KNOCKS</strong> 
+              A guy opens his door And Gets Shot you think that of me. NO!
+              <strong class="text--red"> I AM THE ONE WHO KNOCKS </strong>
             </p>
             <div class="about-me__links">
               <a href="" class="about-me__link">
@@ -64,8 +72,42 @@
               </a>
             </div>
           </div>
-          <figure class="about-me__img--container"></figure>
-          <img src="./Assets/undraw_Science_re_mnnr.png" class="about-me__img" alt="">
+          <figure class="about-me__img--container">
+            <img
+              src="./Assets/undraw_Science_re_mnnr.png"
+              class="about-me__img"
+              alt=""
+            />
+          </figure>
+        </div>
+      </div>
+    </section>
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">These are my associates </h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./Assets/gus.jpg" alt="" class="language__img">
+              </figure>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./Assets/gus.jpg" alt="" class="language__img">
+              </figure>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./Assets/gus.jpg" alt="" class="language__img">
+              </figure>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img src="./Assets/gus.jpg" alt="" class="language__img">
+              </figure>
+            </div>
+          </div>
         </div>
       </div>
     </section>
