--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kernane Raouf</title>
+    <title>Heisenberg</title>
     <link rel="stylesheet" href="./styles.css" />
     <script
       src="https://kit.fontawesome.com/c8e4d183c2.js"
@@ -20,14 +20,14 @@
             <a
               href=""
               class="nav__link--anchor link__hover--effect link__hover--effect--black"
-              >Languages</a
+              >Associates</a
             >
           </li>
           <li>
             <a
               href=""
               class="nav__link--anchor link__hover--effect link__hover--effect--black"
-              >Profile</a
+              >Experience</a
             >
           </li>
           <li>
@@ -74,7 +74,7 @@
           </div>
           <figure class="about-me__img--container">
             <img
-              src="./Assets/undraw_Science_re_mnnr.png"
+              src="./Assets/cook.jpg"
               class="about-me__img"
               alt=""
             />
@@ -125,12 +125,127 @@
           <ul class="project__list">
             <li class="project">
               <div class="project__wrapper">
-                <img src="./" alt="">
+                <img src="./Assets/school.jpg" class="project__img" alt="">
+                 <div class="project__description">
+                  <h3 class="project__description--title">High School Teacher</h3>
+                  <h4 class="project__description--sub-title">
+                    This was me when I was not a sigma male 
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur harum amet perferendis magni corporis corrupti quisquam animi eos doloribus, sint, ipsam consequatur nulla soluta numquam optio iste! Quasi, reiciendis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" class="project__description--link">
+                      <i class="fa-solid fa-lungs-virus"></i>
+                    </a>
+                    <a href="https://www.github.com/yourlink"class="project__description--link">
+                      <i class="fa-solid fa-flask"></i>
+                  </div>
+                 </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./Assets/breaking_bad_12.jpg" class="project__img" alt="">
+                 <div class="project__description">
+                  <h3 class="project__description--title">Meth Entrepreneur </h3>
+                  <h4 class="project__description--sub-title">
+                    The Beggining of HEISENBERG
+                  </h4>
+                  <p class="project__description--para">
+                    Our first operation of business adipisicing elit. Minus pariatur harum amet perferendis magni corporis corrupti quisquam animi eos doloribus, sint, ipsam consequatur nulla soluta numquam optio iste! Quasi, reiciendis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" class="project__description--link">
+                      <i class="fa-solid fa-flask"></i>
+                    </a>
+                    <a href="https://www.github.com/yourlink"class="project__description--link">
+                      <i class="fa-brands fa-redhat"></i>
+                  </div>
+                 </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./Assets/lab.jpg" class="project__img" alt="">
+                 <div class="project__description">
+                  <h3 class="project__description--title">Methylamine Cook</h3>
+                  <h4 class="project__description--sub-title">
+                    You are a millionare and your still complaning
+                  </h4>
+                  <p class="project__description--para">
+                    Yo Mr.white this guy is ripping us of yo! amet consectetur adipisicing elit. Minus pariatur harum amet perferendis magni corporis corrupti quisquam animi eos doloribus, sint, ipsam consequatur nulla soluta numquam optio iste! Quasi, reiciendis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" class="project__description--link">
+                      <i class="fa-solid fa-biohazard"></i>
+                    </a>
+                    <a href="https://www.github.com/yourlink"class="project__description--link">
+                      <i class="fa-solid fa-money-bill-wave"></i>
+                  </div>
+                 </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img src="./Assets/house.jpg" class="project__img" alt="">
+                 <div class="project__description">
+                  <h3 class="project__description--title">Methylamine Empire</h3>
+                  <h4 class="project__description--sub-title">
+                  This is my prime 
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus pariatur harum amet perferendis magni corporis corrupti quisquam animi eos doloribus, sint, ipsam consequatur nulla soluta numquam optio iste! Quasi, reiciendis?
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" class="project__description--link">
+                      <i class="fa-brands fa-redhat"></i>
+                    </a>
+                    <a href="https://www.github.com/yourlink"class="project__description--link">
+                      <i class="fa-solid fa-flask"></i>
+                  </div>
+                 </div>
               </div>
             </li>
           </ul>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="row footer__row">
+        <a href="#" class="footer__anchor">
+          <figure class="footer__logo">
+            <img src="./Assets/logo.jpg" class="footer__logo--img" alt="">
+          </figure>
+          <span class="footer__logo--popper">
+            Top
+            <i class="fas fa-arrow-up"></i>
+          </span>
+        </a>
+        <div class="footer__social--list">
+          <a href="https://lospollos" class="
+          footer__social--link
+          link__hover-effect
+          link__hover--effect--white
+          " target="_blank">Associates</a>
+          <a href="https://lospollos" class="
+          footer__social--link
+          link__hover-effect
+          link__hover--effect--white
+          " target="_blank"> Reqirements</a>
+          <a href="https://lospollos" class="
+          footer__social--link
+          link__hover-effect
+          link__hover--effect--white
+          " target="_blank">Contact</a>
+          <a href="https://lospollos" class="
+          footer__social--link
+          link__hover-effect
+          link__hover--effect--white
+          " target="_blank">Legal Advice</a>
+        </div>
+        <div class="footer__copyright">Join The Empire</div>
+      </div>
+    </footer>
   </body>
 </html>
